linstaller (1.51.0-1) UNRELEASED; urgency=low

  * Added alan extension and its relevant alan-ext-linstaller package
  * New wrapper for linstaller that displays "Press ENTER to close" if
    linstaller has failed (prevents the immediate destroy of the
    terminal window)
  * Added copyright (python-stdeb didn't have created one :/)
  * Added new live-config-linstaller package.
  * partdisks: do not fail if no swap is available/selected
  * partdisks: mount empty partitions that have "useas" correctly defined

 -- Eugenio Paolantonio (g7) <me@medesimo.eu>  Sun, 14 Aug 2011 17:05:47 +0200

linstaller (1.50.0-1) emily; urgency=low

  * Build-Depend too on python2.7

 -- Eugenio (g7) <morarossa@gmail.com>  Thu, 11 Aug 2011 18:00:29 +0200

linstaller (1.50.0) emily; urgency=low

  * Initial release.

 -- Eugenio (g7) <morarossa@gmail.com>  Mon, 01 Aug 2011 11:27:24 +0200